penguin fashion website done

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active ms-4" aria-current="page" href="#"><strong>Home</strong></a>
-                  <a class="nav-link ms-4" href="#"><strong>Product</strong></a>
-                  <a class="nav-link ms-4" href="#"><strong>About Us</strong></a>
-                  <a class="nav-link ms-4" href="#"><strong>Contact Us</strong></a>
+                  <a class="nav-link ms-4" href="#Product"><strong>Product</strong></a>
+                  <a class="nav-link ms-4" href="#About-us"><strong>About Us</strong></a>
+                  <a class="nav-link ms-4" href="#Contact-us"><strong>Contact Us</strong></a>
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
 
       <!-- Women Jacket start here -->
        
-      <section class="mt-5 pt-5">
+      <section id="Product" class="mt-5 pt-5">
         <h2 class="almost-violet"><strong>WOMAN JACKET</strong></h2>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 pt-2">
           <div class="col">
@@ -210,9 +210,9 @@
 
       <!-- Service & Review Part Start here -->
 
-      <section class="mt-5 pt-5">
+      <section id="About-us" class="mt-5 pt-5">
         <div class="mt-5">
-        <h2 class="almost-violet"><strong>SERVICE</strong></h2>
+        <h2 class="almost-violet"><strong>OUR SERVICE</strong></h2>
         <div class="row mt-5">
           <div class="col-md-6">
             <div class="row">
@@ -255,7 +255,7 @@
 
       <!-- Extra part start here -->
 
-      <section class="mt-5 pt-5">
+      <section id="Contact-us" class="mt-5 pt-5">
         <div class="mt-5 pt-5 extra-part">  
         <h1 class="text-center" id="get-in-touch">GET IN TOUCH</h1>
          <div class="row mt-4 pt-4">
