everything okk done!

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2 class="almost-violet"><strong>WOMAN JACKET</strong></h2>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 pt-2">
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow penguin-card">
               <img id="female-jacket2" src="images/female-jacket2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Yellow Coat Jacket</strong></h3>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 penguin-card shadow">
               <img id="female-jacket1" src="images/female-jacket1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Ladies Jacket</strong></h3>
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 penguin-card shadow">
               <img id="female-jacket3" src="images/female-jacket3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Woman Leather Jacket</strong></h3>
@@ -145,7 +145,7 @@
         <h2 class="almost-violet"><strong>MAN JACKET</strong></h2>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2 pt-2">
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 penguin-card shadow">
               <img class="male-jacket" src="images/man-jacket1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Snowboard Jacket Mens</strong></h3>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 penguin-card shadow">
               <img class="male-jacket" src="images/male-jacket3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Man Leather Jackets</strong></h3>
@@ -183,7 +183,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 penguin-card shadow">
               <img class="male-jacket" src="images/male-jacket2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h3 class="card-title almost-violet"><strong>Man Casual Jackets</strong></h3>
