--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         <h2 class="almost-violet"><strong>OUR SERVICE</strong></h2>
         <div class="row mt-5">
           <div class="col-md-6">
-            <div class="row">
-              <div class="d-flex justify-content-between mt-3">
+            <div class="row sercice-area">
+              <div class="d-flex justify-content-between mt-3 bg-light shadow">
                 <img style="width: 100px;" src="images/perfect-kit.png" alt="" srcset="">
                 <div class="container">
                   <h3>Find the Perfect Fit</h3>
@@ -224,7 +224,7 @@
                 </div>
               </div>
 
-              <div class="d-flex justify-content-between mt-3">
+              <div class="d-flex justify-content-between mt-3 bg-light shadow">
                 <img style="width: 100px;" src="images/free-exchange.png" alt="" srcset="">
                 <div class="container">
                   <h3>Free Exchanges</h3>
@@ -232,7 +232,7 @@
                 </div>
               </div>
 
-              <div class="d-flex justify-content-between mt-3">
+              <div class="d-flex justify-content-between mt-3 bg-light shadow">
                 <img style="width: 100px;" src="images/contact.png" alt="" srcset="">
                 <div class="container">
                   <h3>Contact Our Seller</h3>
